integration_tests/codegen_fail/fail/union/struct_no_fields.stderr
error: GraphQL union expects at least one union variant
 --> $DIR/struct_no_fields.rs:4:1
  |
4 | struct Character;
  | ^^^^^^^^^^^^^^^^^
  |
  = note: https://spec.graphql.org/June2018/#sec-Unions
